RideActivity fully populated.